--- a/animals.html
+++ b/animals.html
@@ -69,146 +69,129 @@
         <ul class="cards">
             <ul class="cards">
 <li class="cards__item">
-  <div class="card__title">American Foxhound</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-      <strong>Type:</strong> Hound<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Arctic Fox</div>
+  <div class="card__title">Bengal Tiger</div>
   <p class="card__text">
       <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Eurasia<br/>
+      <strong>Location:</strong> Asia<br/>
       <strong>Type:</strong> Mammal<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Cross Fox</div>
+  <div class="card__title">Indochinese Tiger</div>
   <p class="card__text">
       <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-      <strong>Type:</strong> mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Darwin’s fox</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> South-America<br/>
+      <strong>Location:</strong> Asia<br/>
       <strong>Type:</strong> Mammal<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">English Foxhound</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Fennec Fox</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Africa<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Fox</div>
+  <div class="card__title">Malayan Tiger</div>
   <p class="card__text">
       <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Africa<br/>
+      <strong>Location:</strong> Asia<br/>
       <strong>Type:</strong> Mammal<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Fox Snakes</div>
+  <div class="card__title">Saber-Toothed Tiger</div>
   <p class="card__text">
       <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Fox Squirrel</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
       <strong>Location:</strong> Central-America<br/>
-      <strong>Type:</strong> rodent<br/>
+      <strong>Type:</strong> Mammal<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Fox Terrier</div>
+  <div class="card__title">Sand Tiger Shark</div>
   <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Ocean<br/>
+      <strong>Type:</strong> Fish<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Golden-Crowned Flying Fox</div>
+  <div class="card__title">Siberian Tiger</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong> Mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">South China Tiger</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong> Mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Sumatran Tiger</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong> Mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Tasmanian Tiger</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Oceania<br/>
+      <strong>Type:</strong> Marsupial<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Tiger</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong> Mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Tiger Beetle</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Africa<br/>
+      <strong>Type:</strong> insect<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Tiger Moth</div>
   <p class="card__text">
       <strong>Diet:</strong> Herbivore<br/>
       <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong> Insect<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Gray Fox</div>
+  <div class="card__title">Tiger Rattlesnake</div>
   <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Diet:</strong> Carnivore<br/>
       <strong>Location:</strong> Central-America<br/>
-      <strong>Type:</strong> Mammal<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Kit Fox</div>
+  <div class="card__title">Tiger Salamander</div>
   <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Central-America<br/>
-      <strong>Type:</strong> mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Marble Fox</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Diet:</strong> Carnivore<br/>
       <strong>Location:</strong> North-America<br/>
-      <strong>Type:</strong> Mammal<br/>
+      <strong>Type:</strong> Amphibian<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Red Fox</div>
+  <div class="card__title">Tiger Shark</div>
   <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Africa<br/>
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Ocean<br/>
+      <strong>Type:</strong> Fish<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Smooth Fox Terrier</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Tibetan Fox</div>
+  <div class="card__title">White Tiger</div>
   <p class="card__text">
       <strong>Diet:</strong> Carnivore<br/>
       <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> Mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Toy Fox Terrier</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Wire Fox Terrier</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
   </p>
 </li>
 </ul>
