--- a/animals.html
+++ b/animals.html
@@ -67,134 +67,12 @@
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-            <ul class="cards">
-<li class="cards__item">
-  <div class="card__title">Bengal Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> Mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Indochinese Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> Mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Malayan Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> Mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Saber-Toothed Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Central-America<br/>
-      <strong>Type:</strong> Mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Sand Tiger Shark</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Ocean<br/>
-      <strong>Type:</strong> Fish<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Siberian Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> Mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">South China Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> Mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Sumatran Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> Mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Tasmanian Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Oceania<br/>
-      <strong>Type:</strong> Marsupial<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> Mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Tiger Beetle</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Africa<br/>
-      <strong>Type:</strong> insect<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Tiger Moth</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Herbivore<br/>
-      <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> Insect<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Tiger Rattlesnake</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Central-America<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Tiger Salamander</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-      <strong>Type:</strong> Amphibian<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Tiger Shark</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Ocean<br/>
-      <strong>Type:</strong> Fish<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">White Tiger</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-  </p>
-</li>
-</ul>
+            
+        <div style="text-align:center; margin-top:50px;">
+            <h2 style="color:#b22222;">The animal "pineapple" doesn't exist 🦓❌</h2>
+            <p style="color:#555;">Try searching for something else, like <em>Fox</em> or <em>Tiger</em>.</p>
+        </div>
+        
         </ul>
     </body>
 </html>
