created new data_fetcher.py file & splitted functions

--- a/animals.html
+++ b/animals.html
@@ -67,12 +67,326 @@
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-            
-        <div style="text-align:center; margin-top:50px;">
-            <h2 style="color:#b22222;">The animal "pineapple" doesn't exist 🦓❌</h2>
-            <p style="color:#555;">Try searching for something else, like <em>Fox</em> or <em>Tiger</em>.</p>
-        </div>
-        
+            <ul class="cards">
+<li class="cards__item">
+  <div class="card__title">African Wild Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Africa<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">American Bulldog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> North-America<br/>
+      <strong>Type:</strong> Mastiff<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">American Dog Tick</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> North-America<br/>
+      <strong>Type:</strong> Arachnid<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">American Eskimo Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Anatolian Shepherd Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Appenzeller Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Australian Bulldog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Oceania<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Australian Cattle Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Oceania<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Australian Kelpie Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Oceania<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Basenji Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Africa<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Bernese Mountain Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Blue Lacy Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> North-America<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Bolognese Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Boxer Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Brown Dog Tick</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Africa<br/>
+      <strong>Type:</strong> Arachnid<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Bulldog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Canaan Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Canadian Eskimo Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> North-America<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Carolina Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> North-America<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Catalan Sheepdog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Chinese Crested Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Czechoslovakian Wolfdog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+      <strong>Type:</strong> mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Dog Tick</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Africa<br/>
+      <strong>Type:</strong> Arachnid<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Dogo Argentino</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> South-America<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Dogue De Bordeaux</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">English Bulldog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Entlebucher Mountain Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Eskimo Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> North-America<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Estrela Mountain Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Formosan Mountain Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong> mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">French Bulldog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Greater Swiss Mountain Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Greenland Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> North-America<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Icelandic Sheepdog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+      <strong>Type:</strong> mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Moscow Watchdog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Eurasia<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Northern Inuit Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Old English Sheepdog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Polish Lowland Sheepdog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Prairie Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Central-America<br/>
+      <strong>Type:</strong> Mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Raccoon Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong> Mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Russian Bear Dog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Eurasia<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Saarloos Wolfdog</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Europe<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Spiny Dogfish</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Ocean<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Viper shark (dogfish)</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Ocean<br/>
+      <strong>Type:</strong> Fish<br/>
+  </p>
+</li>
+</ul>
         </ul>
     </body>
 </html>
