created .env and .gitignore and stored API KEY there

--- a/animals.html
+++ b/animals.html
@@ -69,57 +69,6 @@
         <ul class="cards">
             <ul class="cards">
 <li class="cards__item">
-  <div class="card__title">African Wild Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Africa<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">American Bulldog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-      <strong>Type:</strong> Mastiff<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">American Dog Tick</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-      <strong>Type:</strong> Arachnid<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">American Eskimo Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Anatolian Shepherd Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Appenzeller Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Australian Bulldog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Oceania<br/>
-  </p>
-</li>
-<li class="cards__item">
   <div class="card__title">Australian Cattle Dog</div>
   <p class="card__text">
       <strong>Diet:</strong> Omnivore<br/>
@@ -127,78 +76,36 @@
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Australian Kelpie Dog</div>
+  <div class="card__title">Banjo Catfish</div>
   <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Oceania<br/>
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> South-America<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Basenji Dog</div>
+  <div class="card__title">Blue Catfish</div>
   <p class="card__text">
       <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Africa<br/>
+      <strong>Location:</strong> Central-America<br/>
+      <strong>Type:</strong> Fish<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Bernese Mountain Dog</div>
+  <div class="card__title">Bobcat</div>
   <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Central-America<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Blue Lacy Dog</div>
+  <div class="card__title">Cat-Eyed Snake</div>
   <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> North-America<br/>
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Central-America<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Bolognese Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Boxer Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Brown Dog Tick</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Africa<br/>
-      <strong>Type:</strong> Arachnid<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Bulldog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Canaan Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Canadian Eskimo Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Carolina Dog</div>
+  <div class="card__title">Catahoula Leopard</div>
   <p class="card__text">
       <strong>Diet:</strong> Omnivore<br/>
       <strong>Location:</strong> North-America<br/>
@@ -212,145 +119,106 @@
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Chinese Crested Dog</div>
+  <div class="card__title">Caterpillar</div>
   <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Czechoslovakian Wolfdog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-      <strong>Type:</strong> mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Dog Tick</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Diet:</strong> Herbivore<br/>
       <strong>Location:</strong> Africa<br/>
-      <strong>Type:</strong> Arachnid<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Dogo Argentino</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> South-America<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Dogue De Bordeaux</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">English Bulldog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Entlebucher Mountain Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Eskimo Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Estrela Mountain Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Formosan Mountain Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Asia<br/>
-      <strong>Type:</strong> mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">French Bulldog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Greater Swiss Mountain Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Greenland Dog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> North-America<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Icelandic Sheepdog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Europe<br/>
-      <strong>Type:</strong> mammal<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Moscow Watchdog</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Eurasia<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Northern Inuit Dog</div>
+  <div class="card__title">Catfish</div>
   <p class="card__text">
       <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Europe<br/>
+      <strong>Location:</strong> Africa<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Old English Sheepdog</div>
+  <div class="card__title">Corn Rex Cat (Cornish Rex)</div>
   <p class="card__text">
       <strong>Diet:</strong> Omnivore<br/>
       <strong>Location:</strong> Europe<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Polish Lowland Sheepdog</div>
+  <div class="card__title">Electric Catfish</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Africa<br/>
+      <strong>Type:</strong> Ray-finned fish<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">European Polecat</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Africa<br/>
+      <strong>Type:</strong> Mustelid<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">European Wildcat</div>
   <p class="card__text">
       <strong>Diet:</strong> Omnivore<br/>
       <strong>Location:</strong> Europe<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Prairie Dog</div>
+  <div class="card__title">Fisher Cat</div>
   <p class="card__text">
       <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> North-America<br/>
+      <strong>Type:</strong> Mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Fishing Cat</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Ghost Catfish</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong> Siluriformes<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Great Crested Flycatcher</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Central-America<br/>
+      <strong>Type:</strong> Bird<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Hardhead Catfish</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Ocean<br/>
+      <strong>Type:</strong> ray-finned fish<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Highland Cattle</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Herbivore<br/>
+      <strong>Location:</strong> Europe<br/>
+      <strong>Type:</strong> Mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Jaguarundi Cat</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
       <strong>Location:</strong> Central-America<br/>
       <strong>Type:</strong> Mammal<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Raccoon Dog</div>
+  <div class="card__title">Leopard Cat</div>
   <p class="card__text">
       <strong>Diet:</strong> Carnivore<br/>
       <strong>Location:</strong> Asia<br/>
@@ -358,32 +226,51 @@
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Russian Bear Dog</div>
+  <div class="card__title">Mekong Giant Catfish</div>
   <p class="card__text">
-      <strong>Diet:</strong> Omnivore<br/>
-      <strong>Location:</strong> Eurasia<br/>
+      <strong>Diet:</strong> Herbivore<br/>
+      <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong>  Ray-finned fish<br/>
   </p>
 </li>
 <li class="cards__item">
-  <div class="card__title">Saarloos Wolfdog</div>
+  <div class="card__title">Polecat</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> Africa<br/>
+      <strong>Type:</strong> Mammal<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Redtail Catfish</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Carnivore<br/>
+      <strong>Location:</strong> South-America<br/>
+      <strong>Type:</strong> Fish<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Sulcata Tortoise</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Herbivore<br/>
+      <strong>Location:</strong> Africa<br/>
+      <strong>Type:</strong> Reptile<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Walking Catfish</div>
+  <p class="card__text">
+      <strong>Diet:</strong> Omnivore<br/>
+      <strong>Location:</strong> Asia<br/>
+      <strong>Type:</strong> Fish<br/>
+  </p>
+</li>
+<li class="cards__item">
+  <div class="card__title">Wels Catfish</div>
   <p class="card__text">
       <strong>Diet:</strong> Omnivore<br/>
       <strong>Location:</strong> Europe<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Spiny Dogfish</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Ocean<br/>
-  </p>
-</li>
-<li class="cards__item">
-  <div class="card__title">Viper shark (dogfish)</div>
-  <p class="card__text">
-      <strong>Diet:</strong> Carnivore<br/>
-      <strong>Location:</strong> Ocean<br/>
-      <strong>Type:</strong> Fish<br/>
+      <strong>Type:</strong> ray-finned fish<br/>
   </p>
 </li>
 </ul>
